--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="meteor_fall">Fall:\n%1$s</string>
     <string name="meteor_reclass">Recclass:\n%1$s</string>
     <string name="meteor_mass">Mass:\n%1$.2f</string>
+    <string name="meteors">Meteors</string>
 </resources>
